Add godocs to controller endpoints
